# sparql-tsv

./: .gitignore  README.md  pyproject.toml
sparql_tsv/: __init__.py  cli.py  core.py
